--- a/final_project_cogs-189.ipynb
+++ b/final_project_cogs-189.ipynb
@@ -27,10 +27,7 @@
     "\n",
     "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "\n",
-    "##import otter\n",
-    "##grader = otter.Notebook(\"final_project.ipynb\")"
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n"
    ]
   },
   {
